Added event complete method and descriptions for routes
