# api/main.py
@@ -27,12 +27,13 @@ app.add_middleware(
 print("hello")
 
 
-@app.get("/users/", response_model=List[schemas.User], tags=["User"])
+@app.get("/users/", response_model=List[schemas.User], tags=["User"], summary="Get all users in database")
 def read_users(skip: int = 0, limit: int = 100, db: Session = Depends(get_db)):
     users = crud.get_users(db, skip=skip, limit=limit)
     return users
 
-@app.post("/users/", response_model=schemas.User, tags=["User"])
+
+@app.post("/users/", response_model=schemas.User, tags=["User"], summary="Make a new user")
 def create_user(user: schemas.UserCreate, db: Session = Depends(get_db)):
     db_user = auth.get_user(db, username=user.username)
     if db_user:
@@ -40,73 +41,76 @@ def create_user(user: schemas.UserCreate, db: Session = Depends(get_db)):
     return api.crud.create_user(db=db, user=user)
 
 
-@app.put("/users/modify", tags=["User"])
+@app.put("/users/modify", tags=["User"], summary="Change user password")
 def modify_user(new_password: str, db: Session = Depends(get_db),
                 current_user: schemas.User = Depends(auth.get_current_user)):
     return crud.modify_user(db=db, username=current_user.username, new_password=new_password)
 
 
-@app.get("/users/token/test", tags=["User"])
+@app.get("/users/token/test", tags=["User"], summary="Test Bearer Token")
 async def test_token(current_user: schemas.User = Depends(auth.get_current_user)):
     return current_user
 
 
-@app.post("/users/companions/", response_model=schemas.Companion, tags=["Companion"])
+@app.post("/users/companions/", response_model=schemas.Companion, tags=["Companion"], summary="Create a new companion")
 def create_companion_for_user(item: schemas.CompanionCreate, db: Session = Depends(get_db),
                               current_user: schemas.User = Depends(auth.get_current_user)):
     return crud.create_user_companion(db=db, item=item, username=current_user.username)
 
 
-@app.put("/users/companions/", tags=["Companion"])
+@app.put("/users/companions/", tags=["Companion"], summary="Modify a companion")
 def modify_companion(companion_id: int, item: schemas.CompanionCreate, db: Session = Depends(get_db),
                      current_user: schemas.User = Depends(auth.get_current_user)):
     return crud.modify_companion(db=db, companion_id=companion_id, item=item)
 
 
-@app.delete("/users/companions/{companion_id}", tags=["Companion"])
+@app.delete("/users/companions/{companion_id}", tags=["Companion"], summary="Delete a companion")
 def delete_companion(companion_id: int, current_user: schemas.User = Depends(auth.get_current_user),
                      db: Session = Depends(get_db), ):
     database.delete_row(db=db, table=models.Event, row=models.Event.companion_id, row_id=companion_id)
     return database.delete_row(db=db, table=models.Companion, row=models.Companion.companion, row_id=companion_id)
 
 
-@app.get("/companions/", response_model=List[schemas.Companion], tags=["Companion"])
-def read_companions(skip: int = 0, limit: int = 100, db: Session = Depends(get_db),
-                    current_user: schemas.User = Depends(auth.get_current_user)):
+@app.get("/companions/", response_model=List[schemas.Companion], tags=["Companion"],
+         summary="Get all Companions for user")
+def read_companions(skip: int = 0, limit: int = 100, current_user: schemas.User = Depends(auth.get_current_user),
+                    db: Session = Depends(get_db)):
     return crud.get_companions(db=db, current_user=current_user, skip=skip, limit=limit)
 
 
-# @app.get("/companions/event/", tags=["Event"])
-# def get_events(db: Session = Depends(get_db), current_user:)
+@app.get("/companions/event/", tags=["Event"], summary="Get all events for User")
+def get_events(skip: int = 0, limit: int = 100, current_user: schemas.User = Depends(auth.get_current_user),
+               db: Session = Depends(get_db)):
+    return crud.get_events(db=db, current_user=current_user, skip=skip, limit=limit)
 
 
-@app.post("/companions/event/", tags=["Event"])
+@app.post("/companions/event/", tags=["Event"], summary="Create a new event for companion")
 def create_event(companion_id: int, item: schemas.EventCreate,
                  current_user: schemas.User = Depends(auth.get_current_user),
                  db: Session = Depends(get_db)):
     return crud.create_event(db=db, item=item, companion_id=companion_id, username_id=current_user.username)
 
 
-@app.put("/companions/event/", tags=["Event"])
+@app.put("/companions/event/", tags=["Event"], summary="Modify event")
 def modify_event(event_id: int, item: schemas.EventBase, current_user: schemas.User = Depends(auth.get_current_user),
                  db: Session = Depends(get_db)):
     return crud.modify_event(db=db, item=item, event_id=event_id)
 
 
-@app.put("/companions/event/last_complete", tags=["Event"])
+@app.put("/companions/event/last_complete", tags=["Event"], summary="Complete event",
+         description="Update `last_trigger` field to current time ")
 def update_last_complete(event_id: int, current_user: schemas.User = Depends(auth.get_current_user),
                          db: Session = Depends(get_db)):
-    e = models.Event()
-    e.last_complete = datetime.now()
-    return crud.modify_event(db=db, item=e, event_id=event_id)
+    db_event = db.query(models.Event).filter(models.Event.event_id == event_id)
+    return crud.modify_session(session=db_event, item={"last_trigger": datetime.now()}, db=db)
 
 
-@app.delete("/companions/event/{event_id}", tags=["Event"])
+@app.delete("/companions/event/{event_id}", tags=["Event"], summary="Delete event")
 def delete_event(event_id: int, token: str = Depends(auth.get_current_user), db: Session = Depends(get_db)):
     return database.delete_row(db=db, table=models.Event, row=models.Event.event_id, row_id=event_id)
 
 
-@app.post("/token", response_model=schemas.Token, tags=["Authentication"])
+@app.post("/token", response_model=schemas.Token, tags=["Authentication"], summary="Login")
 def login(db: Session = Depends(get_db), form_data: OAuth2PasswordRequestForm = Depends()):
     return auth.login_for_access_token(form_data=form_data, db=db)
 
